# basher

./: .coveragerc  .gitignore  AGENTS.md  Makefile  README.md  aiapi.py  basher.firejail.profile  basher.py  flake.nix  fulltest.sh  generate_twotigers.py  pyproject.toml  runagent.sh
prompts/: core
tests/: .gitignore  test_aiapi.py  test_main.py
